# simplefb

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  koi8r.fnt  simplefb.c  vga.h
debian/: changelog  control  copyright  rules  simplefb.install
test/: test.c  vga.c
